--- a/src/gui.glade
+++ b/src/gui.glade
@@ -1480,8 +1480,9 @@ You should have received a copy of the GNU General Public License along with blo
                     <property name="visible">True</property>
                     <property name="spacing">2</property>
                     <child>
-                      <object class="GtkVBox" id="vbox1">
+                      <object class="GtkVBox" id="newgame_challenge_vbox_pickchallenge">
                         <property name="visible">True</property>
+                        <property name="spacing">2</property>
                         <child>
                           <object class="GtkRadioButton" id="newgame_challenge_radiobutton_list">
                             <property name="label" translatable="yes">Pick a built-in challenge</property>
@@ -1492,6 +1493,7 @@ You should have received a copy of the GNU General Public License along with blo
                             <property name="draw_indicator">True</property>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
@@ -1501,15 +1503,21 @@ You should have received a copy of the GNU General Public License along with blo
                             <property name="can_focus">True</property>
                             <property name="hscrollbar_policy">automatic</property>
                             <property name="vscrollbar_policy">automatic</property>
+                            <property name="shadow_type">in</property>
                             <child>
                               <object class="GtkIconView" id="newgame_challenge_treeview">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="columns">1</property>
+                                <property name="row_spacing">0</property>
+                                <property name="column_spacing">0</property>
+                                <property name="margin">1</property>
+                                <property name="item_padding">0</property>
                               </object>
                             </child>
                           </object>
                           <packing>
+                            <property name="padding">4</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -1523,6 +1531,7 @@ You should have received a copy of the GNU General Public License along with blo
                             <property name="group">newgame_challenge_radiobutton_list</property>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">2</property>
                           </packing>
                         </child>
@@ -1533,6 +1542,7 @@ You should have received a copy of the GNU General Public License along with blo
                             <property name="title" translatable="yes">Select A Blockem Challenge .xml File</property>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">3</property>
                           </packing>
                         </child>
@@ -1555,32 +1565,40 @@ You should have received a copy of the GNU General Public License along with blo
                             <child>
                               <object class="GtkTable" id="table1">
                                 <property name="visible">True</property>
-                                <property name="n_rows">4</property>
-                                <property name="n_columns">2</property>
+                                <property name="n_rows">6</property>
+                                <property name="n_columns">4</property>
+                                <property name="column_spacing">2</property>
+                                <property name="row_spacing">2</property>
                                 <child>
                                   <object class="GtkEntry" id="newgame_challenge_entry_author">
                                     <property name="visible">True</property>
-                                    <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
                                     <property name="invisible_char">&#x25CF;</property>
+                                    <property name="caps_lock_warning">False</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
-                                    <property name="right_attach">2</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="top_attach">2</property>
+                                    <property name="bottom_attach">3</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                                 <child>
                                   <object class="GtkEntry" id="newgame_challenge_entry_email">
                                     <property name="visible">True</property>
-                                    <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
                                     <property name="invisible_char">&#x25CF;</property>
+                                    <property name="caps_lock_warning">False</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
-                                    <property name="right_attach">2</property>
-                                    <property name="top_attach">1</property>
-                                    <property name="bottom_attach">2</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="top_attach">3</property>
+                                    <property name="bottom_attach">4</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1589,6 +1607,11 @@ You should have received a copy of the GNU General Public License along with blo
                                     <property name="xalign">0</property>
                                     <property name="label" translatable="yes">Author:</property>
                                   </object>
+                                  <packing>
+                                    <property name="top_attach">2</property>
+                                    <property name="bottom_attach">3</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
                                 </child>
                                 <child>
                                   <object class="GtkLabel" id="newgame_challenge_label_email">
@@ -1597,8 +1620,9 @@ You should have received a copy of the GNU General Public License along with blo
                                     <property name="label" translatable="yes">E-Mail:</property>
                                   </object>
                                   <packing>
-                                    <property name="top_attach">1</property>
-                                    <property name="bottom_attach">2</property>
+                                    <property name="top_attach">3</property>
+                                    <property name="bottom_attach">4</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1608,9 +1632,10 @@ You should have received a copy of the GNU General Public License along with blo
                                     <property name="label" translatable="yes">Description:</property>
                                   </object>
                                   <packing>
-                                    <property name="right_attach">2</property>
-                                    <property name="top_attach">2</property>
-                                    <property name="bottom_attach">3</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="top_attach">4</property>
+                                    <property name="bottom_attach">5</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1624,7 +1649,6 @@ You should have received a copy of the GNU General Public License along with blo
                                       <object class="GtkTextView" id="newgame_challenge_textview_description">
                                         <property name="height_request">75</property>
                                         <property name="visible">True</property>
-                                        <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
                                         <property name="wrap_mode">word</property>
@@ -1633,9 +1657,122 @@ You should have received a copy of the GNU General Public License along with blo
                                     </child>
                                   </object>
                                   <packing>
+                                    <property name="right_attach">4</property>
+                                    <property name="top_attach">5</property>
+                                    <property name="bottom_attach">6</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_challenge_label_nrows">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">Number of rows:</property>
+                                  </object>
+                                  <packing>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_challenge_label_ncols">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">1</property>
+                                    <property name="label" translatable="yes">columns:</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">2</property>
+                                    <property name="right_attach">3</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_challenge_label_taken">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">Taken squares:</property>
+                                  </object>
+                                  <packing>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_challenge_label_taken_challenger">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">1</property>
+                                    <property name="label" translatable="yes">challenger's:</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">2</property>
+                                    <property name="right_attach">3</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkEntry" id="newgame_challenge_entry_nrows">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">3</property>
+                                    <property name="caps_lock_warning">False</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
-                                    <property name="top_attach">3</property>
-                                    <property name="bottom_attach">4</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkEntry" id="newgame_challenge_entry_ncols">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">3</property>
+                                    <property name="caps_lock_warning">False</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">3</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkEntry" id="newgame_challenge_entry_taken">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">3</property>
+                                    <property name="caps_lock_warning">False</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkEntry" id="newgame_challenge_entry_taken_challenger">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">3</property>
+                                    <property name="caps_lock_warning">False</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">3</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="y_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                               </object>
@@ -1656,7 +1793,6 @@ You should have received a copy of the GNU General Public License along with blo
                     </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
                     <property name="position">2</property>
                   </packing>
                 </child>
